| Bug #39885 | Heavy DDL opertations causes hang due to error 266 in ndb_global_schema_lock | ||
|---|---|---|---|
| Submitted: | 6 Oct 2008 14:42 | Modified: | 7 Oct 2008 23:04 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 5.1-telco | OS: | Linux |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[7 Oct 2008 8:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/55536 2688 Tomas Ulin 2008-10-07 Bug#39885 Heavy DDL opertaions causes hand due to error 266 in ndb_global_schema_lock
[7 Oct 2008 21:19]
Tomas Ulin
fixed in cluster 6.2.16 and 6.3.19
[7 Oct 2008 23:04]
Jon Stephens
Documented bugfix in the NDB-6.2.16 and NDB-6.3.19 changelogs as follows:
Heavy DDL usage caused the mysqld processes to hang due to a
timeout error (NDB error code 266).
[12 Dec 2008 23:30]
Bugs System
Pushed into 6.0.7-alpha (revid:tomas.ulin@sun.com-20081007081931-b2aakh63fwn6bp14) (version source revid:tomas.ulin@sun.com-20081015121427-mqe9vyomt1jroewp) (pib:5)

Description: In stress testing DDL operations in clone mysql-5.1-telco-6.3 the cluster/mysqld's hung during testing: #5 0x00000000007c82e1 in ndbcluster_no_global_schema_lock_abort (thd=0x2aaaac0fa140, msg=0xacadb0 "ha_ndbcluster::alter_table_phase1") at ha_ndbcluster_binlog.cc:763 763 abort(); (gdb) l 758 Thd_ndb *thd_ndb= get_thd_ndb(thd); 759 if (thd_ndb && thd_ndb->global_schema_lock_error != 0) 760 return HA_ERR_NO_CONNECTION; 761 sql_print_error("NDB: programming error, no lock taken while running " 762 "query %s. Message: %s", thd->query, msg); 763 abort(); 764 } 765 766 #include "ha_ndbcluster_lock_ext.h" 767 How to repeat: Setup a 2 mysqld, 2 DN cluster with bin logging Startup 2 cid_ndb_dd.pl against different DB's and different MySQLD's Statup the load_and_drop.pl against 1 st MySQLD Startup add_online.pl against second mysqld Startup TPCB_looper.sh against the second mysqld.