Bug#39885 Heavy DDL opertaions causes hand due to error 266 in ndb_global_schema_lock